--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ike-rsd",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "thirdweb eng <eng@thirdweb.com>",
   "license": "Apache-2.0",
   "main": "lib/index.js",
-  "scope": "@thirdweb",
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "files": [
@@ -30,12 +29,12 @@
   "dependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
-    "react-strict-dom": "^0.0.2"
+    "react-strict-dom": "^0.0.2",
+    "@stylexjs/babel-plugin": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
-    "@stylexjs/babel-plugin": "^0.5.1",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.17",
     "@types/react-native": "^0.71.8",
